[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
fast_log = "1.6"
futures = "0.3"
thiserror = "1"
num-format = "0.4.4"
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }
tmq = "0.4.0"
atomic-counter = "1"
zmq = "0.10.0"
crossbeam = "0.8.2"
